--- a/src/assets/style/reset.scss
+++ b/src/assets/style/reset.scss
@@ -7,6 +7,7 @@
 body {
   color: #666;
   background: #f6f6f6;
+  font: 12px/150% Arial, Verdana, "\5b8b\4f53", arial, "Hiragino Sans GB", "Microsoft YaHei", "微軟正黑體", "儷黑 Pro", sans-serif;;
 }
 
 a {
