--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -1,34 +1,2 @@
 @import "reset";
-// @import "theme";
-.w {
-  width: 1190px;
-  margin: 0 auto;
-}
-
-.fl {
-  float: left;
-}
-
-.fr {
-  float: right;
-}
-
-.pr {
-  position: relative;
-}
-
-.pa {
-  position: absolute;
-}
-
-.active {
-  color: #c81623;
-}
-
-.clearfix:after {
-  content: '';
-  display: block;
-  clear: both;
-  line-height: 0;
-  visibility: hidden;
-}
+@import "common";
